syntax = "proto3";

package org.eigengo.rsa.dashboard.v100;

message Summary {
    int32 totalHandles = 1;
    repeated HandleSummary topHandleSummaries = 2;
}

message HandleSummary {
    string handle = 1;
    repeated Item items = 2;

    message Item {
        int64 timestamp = 1;
        string description = 2;
        repeated bytes images = 3;
        string text = 4;
    }
}
